--- a/Makefile.uk.musl.time
+++ b/Makefile.uk.musl.time
@@ -29,11 +29,11 @@ LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/strftime.c
 LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/strptime.c
 LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/time.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timegm.c
-LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_create.c
-LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_delete.c
-LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_getoverrun.c
-LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_gettime.c
-LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_settime.c
+#LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_create.c
+#LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_delete.c
+#LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_getoverrun.c
+#LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_gettime.c
+#LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timer_settime.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/times.c
 LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/timespec_get.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/time/utime.c
