Comment out scandir, provided by vfscore.
Signed-off-by: Cyril Soldani <cyril.soldani@uliege.be>

--- a/Makefile.uk.musl.dirent
+++ b/Makefile.uk.musl.dirent
@@ -7,7 +7,7 @@ LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/alphasort.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/readdir.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/readdir_r.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/rewinddir.c
-LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/scandir.c
+#LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/scandir.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/seekdir.c
 #LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/telldir.c
 LIBMUSL_SRCS-y += $(LIBMUSL)/src/dirent/versionsort.c
