--- a/Makefile.uk.musl.time
+++ b/Makefile.uk.musl.time
@@ -55,7 +55,7 @@ LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/gmtime_r.c
 LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/localtime.c
 LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/localtime_r.c
 LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/mktime.c
-#LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/nanosleep.c
+LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/nanosleep.c
 LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/strftime.c
 LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/strptime.c
 LIBMUSL_TIME_SRCS-y += $(LIBMUSL)/src/time/time.c
